Fix image alignment in home page

--- a/express/css/global.css
+++ b/express/css/global.css
@@ -331,7 +331,7 @@ body{
 }
 .home-img-container{
     float:left;
-    padding:1em 1em 0 0;
+    padding:0 1em 1em 0;
 }
 .home-img-container img{
     max-height: 100%; 
